<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <Button
            android:id="@+id/menu01"
            style="@style/main_menu"
            android:layout_weight="1"
            android:drawableTop="@drawable/menu_history"
            android:text="@string/menu_historical" />

        <Button
            android:id="@+id/menu02"
            style="@style/main_menu"
            android:layout_weight="1"
            android:drawableTop="@drawable/menu_hi"
            android:text="@string/menu_about_tips" />

        <Button
            android:id="@+id/menu03"
            style="@style/main_menu"
            android:layout_weight="1"
            android:drawableTop="@drawable/menu_exit"
            android:text="@string/menu_exit" />

    </LinearLayout>

</LinearLayout>