<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Main" >

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/holo_blue_light" >

        <Button
            android:id="@+id/currCom"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/def_selector"
            android:drawableRight="@drawable/item_btn_menu"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/def_comname"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout3"
        android:background="@color/holo_red_light" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/banner_text"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout1" >

        <EditText
            android:id="@+id/expressId"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_toLeftOf="@+id/speech"
            android:hint="@string/express_post_id" />

        <Button
            android:id="@+id/serach_btn"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_below="@+id/expressId"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/serach_selector"
            android:text="@string/search"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/speech"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/expressId"
            android:background="@drawable/def_selector"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:src="@drawable/icon_microphone" />
    </RelativeLayout>

</RelativeLayout>