<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <LinearLayout
        android:id="@+id/tableTitle"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:background="@color/holo_blue_light"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/time_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:drawablePadding="-35dp"
            android:drawableRight="@drawable/down3"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/time"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/follow_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2.0"
            android:drawablePadding="-80dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/followInfo"
            android:textColor="@color/white" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/indicate"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_below="@id/tableTitle" >

        <RelativeLayout
            android:id="@+id/colorLine"
            android:layout_width="3dp"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/dot_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/icon_count"
            android:gravity="center"
            android:text="@string/qi"
            android:textSize="8sp" />

        <TextView
            android:id="@+id/dot_full"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/icon_success"
            android:gravity="center"
            android:textSize="8sp"
            android:visibility="gone" />
    </RelativeLayout>

    <ListView
        android:id="@+id/followListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tableTitle"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:cacheColorHint="#00000000"
        android:divider="#00000000"
        android:dividerHeight="10dp"
        android:fadingEdge="none"
        android:listSelector="#00000000"
        android:paddingRight="5dp" >
    </ListView>

</RelativeLayout>